# AML_AT3_group14_streamlit

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: 13475823_Siheng.py  13475823_Siheng_API.py
api/models/13475823_Siheng/: catboost_model.joblib  encode.joblib  gru_checkpoint.pth  lightgbm_model.joblib  scaler.joblib  scaler.pkl
app/: main.py
data/: 13475823-AT3-Ethereum.csv  25229384-AT3-Bitcoin.csv  25428006-AT3-Solana.csv  25658663-AT3-Ripple.csv
students/: 13475823_Siheng.py  25229384_Yukthi.py  25428006_Mitali.py  25658663_Queenie.py  Siheng_13475823.py  s13475823_Siheng.py
