[project]
name = "at3-group14"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki24-hs",email = "yukthi.hosadurgashivalingegowda@student.uts.edu.au"}
]
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "streamlit (==1.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
