[project]
name = "at3-group14"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki24-hs",email = "yukthi.hosadurgashivalingegowda@student.uts.edu.au"}
]
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "streamlit (==1.36.0)",
    "pandas (==2.2.2)",
    "fastapi (>=0.120.0,<0.121.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "joblib (==1.4.2)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "scikit-learn (==1.5.1)",
    "numpy (>=1.25,<2.0)",
    "dill (>=0.4.0,<0.5.0)",
    "catboost (>=1.2.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
