[project]
name = "at3-group14"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki24-hs",email = "yukthi.hosadurgashivalingegowda@student.uts.edu.au"}
]
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "streamlit (==1.36.0)",
    "plotly (==5.20.0)",
    "pandas (==2.2.2)",
    "requests (==2.31.0)",
    "numpy (==1.26.4)",
    "altair (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
